<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">秘信</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title">标题</string>

    <string name="main_tab_name_home">主页</string>
    <string name="main_tab_name_message">消息</string>
    <string name="main_tab_name_connect">通讯录</string>
    <string name="main_tab_name_discover">发现</string>
    <string name="main_tab_name_mine">我的</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">登录</string>
    <string name="login_tip1">没有帐号,</string>
    <string name="login_tip2"><u>立即注册</u></string>
    <string name="login_phone_num">手机号</string>
    <string name="login_psw">密 码</string>
    <string name="login_forget_psw">忘记密码>></string>
    <string name="the_third_account">第三方账号</string>
    <string name="base_info">基本资料</string>
    <string name="register_tip1">请填写真实信息</string>
    <string name="register_tip2">已有账号,</string>
    <string name="register_tip3"><u>立即登录</u></string>
    <string name="real_name">真实姓名</string>
    <string name="register_gender">性别（注册后不可修改）</string>
    <string name="next">下一步</string>
    <string name="grade">年级</string>
    <string name="department">院系</string>
    <string name="school">学校</string>
    <string name="phone_num">手机号</string>
    <string name="cer_code">验证码</string>
    <string name="register_psw">密  码</string>
    <string name="invite_code">邀请码(选填)</string>
    <string name="get_cer_code">获取验证码</string>
    <string name="my_visitor">我的访客</string>
    <string name="my_moment">我的动态</string>
    <string name="my_gallery">我的相册</string>
    <string name="my_reply">我的回复</string>
    <string name="my_apply">申请自媒体</string>
    <string name="my_code">我的二维码</string>
    <string name="my_black_list">我的黑名单</string>
    <string name="vip_center">会员中心</string>
    <string name="set">设置</string>
    <string name="discover">发现</string>
    <string name="search_hint">请输入要查找的人名</string>
    <string name="people_nearby">附近的人</string>
    <string name="group_nearby">附近的组</string>
    <string name="moment_nearby">附近的动态</string>
    <string name="hobby_group">兴趣组</string>
    <string name="recommend_friend">推荐好友</string>
    <string name="alumni_record">校友录</string>
    <string name="second_hand_market">二手市场</string>
    <string name="bro_sis_question">学弟/学妹提问</string>
    <string name="message">消息</string>
    <string name="search_school_hint">请输入要查找的学校</string>
    <string name="grade_choose_hint">请选择你的入学年份</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="moments">动态</string>
    <string name="score">学分</string>
    <string name="invite_tip1">马上邀请好友</string>
    <string name="invite_tip2">打开秘信扫一扫，加我好友</string>
    <string name="invite_tip3">打开秘信扫一扫，加入群组</string>
    <string name="change_password">修改密码</string>
    <string name="change_phone">修改手机号</string>
    <string name="real_name_auth">实名认证</string>
    <string name="write_invite_code">填写邀请码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="version_update">版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="quit_safely">安全退出</string>
    <string name="original_psw">原密码</string>
    <string name="original_psw_hint">请输入原密码</string>
    <string name="new_psw">新密码</string>
    <string name="new_psw_hint">请输入新密码</string>
    <string name="confirm_psw">确认密码</string>
    <string name="confirm_psw_hint">请确认新密码</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="change_phone_hint">请输入要修改的手机号码</string>
    <string name="feedback_hint">把您的反馈告诉我们，我们将不断改进完善</string>
    <string name="submit">提交</string>
    <string name="name">姓名</string>
    <string name="choose_school">请选择学校</string>
    <string name="fill_name">请输入姓名</string>
    <string name="choose_department">请选择院系</string>
    <string name="choose_grade">请选择年级</string>
    <string name="auth_tip1">请上传学生证正面照片</string>
    <string name="auth_tip2">请上传学生证反面照片</string>
    <string name="auth_tip3">请确保你本人的信息真实有效</string>
    <string name="expire_time">到期时间</string>
    <string name="current_score">当前学分</string>
    <string name="refill_vip">充值会员</string>
    <string name="open_length">开通时长</string>
    <string name="price">价格</string>
    <string name="gold_coin">学分</string>
    <string name="open_now">立即开通</string>
    <string name="vip_right_tip">会员特权：</string>
    <string name="vip_right_tip1">1.查看其他学校圈子</string>
    <string name="vip_right_tip2">2.个性化分组颜色</string>
    <string name="vip_right_tip3">3.悄悄关注后无痕浏览</string>
    <string name="vip_right_tip4">4.会员特有等级图标</string>
    <string name="fill_score">充值学分</string>
    <string name="method_of_payment">支付方式</string>
    <string name="fill">充值</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="avatar">头像</string>
    <string name="signature">个性签名</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="address">地址</string>
    <string name="hobby">爱好</string>
    <string name="fill_signature_tip">请输入签名</string>
    <string name="choose_birthday">请选择生日</string>
    <string name="my_birthday">我的生日</string>
    <string name="show_birthday">显示生日</string>
    <string name="fill_address_hint">请输入地址</string>
    <string name="fill_hobby_hint">多个兴趣爱好用空格隔开</string>
    <string name="score_detail">学分明细</string>
    <string name="remove">移除</string>
    <string name="no_data">暂无数据</string>
    <string name="create_group">新建群组</string>
    <string name="group_notice">群组通知</string>
    <string name="my_group_name">群名称</string>
    <string name="group_brief_info">群简介</string>
    <string name="my_group_id">群ID</string>
    <string name="group_master">群主</string>
    <string name="request_join_in">申请加入</string>
    <string name="group_avatar">群头像</string>
    <string name="plate">板块</string>
    <string name="pub_hint1">想和大家分享点什么？</string>
    <string name="public_release">公开发布</string>
    <string name="pub_tip1">同步分享到朋友圈</string>
    <string name="release">发布</string>
    <string name="pub_hint3">点击添加%s秒内短视频</string>
    <string name="my_circle">我的圈子</string>
    <string name="report_tip">请输入举报内容</string>
    <string name="tip">提示</string>
    <string name="tip_content1">确定要删除吗</string>
    <string name="my_cancel">取消</string>
    <string name="permission_tip">您已经拒绝授予权限，请在设置中打开权限!</string>
    <string name="comment">评论</string>
    <string name="comment_tip1">请输入评论内容</string>
    <string name="build_new_group">新建分组</string>
    <string name="edit_group">编辑分组</string>
    <string name="new_group_tip1">新建分组</string>
    <string name="new_group_tip2">请输入新分组名称</string>
    <string name="new_group_tip3">请输入分组名（限8个字符）</string>
    <string name="delete_group">删除分组</string>
    <string name="delete_group_tip">确定要删除分组吗？</string>
    <string name="leave_group">退出群组</string>
    <string name="invite_friend">邀请好友</string>
    <string name="group_psw">群密码</string>
    <string name="is_open_group_approve">开启群审批</string>
    <string name="is_open_group_psw">开启群密码</string>
    <string name="clear_chat_history">清空聊天记录</string>
    <string name="block_group_msg">屏蔽群消息</string>
    <string name="look_all_member">查看全部群成员</string>
    <string name="group_psw_hint1">请输入群密码</string>
    <string name="group_psw_hint2">开启群密码</string>
    <string name="location_me">定位到我</string>
    <string name="chat">聊天</string>
    <string name="get_psw">密码找回</string>
    <string name="change_cover">更换主页封面</string>
    <string name="invite_code_hint1">请输入邀请码</string>
    <string name="search_group_hint">请输入要查找的群组名称</string>
    <string name="nick_name">用户名</string>
    <string name="to_register">注册</string>
    <string name="mute_all_user">禁言</string>

</resources>
