<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/with_space_color"
    android:orientation="vertical"
    tools:context=".ui.mine.setting.ChangePswActivity">

    <include layout="@layout/header_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/original_psw"
            android:textColor="#2D2933"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/original_psw_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/original_psw_hint"
            android:inputType="textPassword"
            android:textSize="15sp" />


    </LinearLayout>

    <View style="@style/divider_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/new_psw"
            android:textColor="#2D2933"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/new_psw_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/new_psw_hint"
            android:inputType="textPassword"
            android:textSize="15sp" />


    </LinearLayout>

    <View style="@style/divider_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/confirm_psw"
            android:textColor="#2D2933"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/confirm_psw_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:gravity="center|start"
            android:hint="@string/confirm_psw_hint"
            android:inputType="textPassword"
            android:textSize="15sp" />


    </LinearLayout>

    <View style="@style/divider_line" />

    <TextView
        android:id="@+id/change_psw_sure_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/default_btn_selector"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="15sp" />


</LinearLayout>