<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/with_space_color"
    android:orientation="vertical"
    tools:context=".ui.mine.setting.ChangePhoneActivity">


    <include layout="@layout/header_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/change_phone_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:hint="@string/change_phone_hint"
            android:inputType="numberSigned"
            android:maxLength="11"
            android:textSize="15sp" />

    </LinearLayout>

    <View style="@style/divider_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="2"
            android:gravity="center|start"
            android:text="@string/cer_code"
            android:textColor="#929292"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/cer_code_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@null"
            android:inputType="numberSigned"
            android:paddingEnd="0dp"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/get_cer_code_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="3"
            android:gravity="center|end"
            android:text="@string/get_cer_code"
            android:textColor="#FF4F64"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/change_phone_save_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/default_btn_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15sp" />


</LinearLayout>