<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/with_space_color"
    android:orientation="vertical">

    <include layout="@layout/header_common" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/group_psw"
            android:textColor="#2D2933"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/group_psw_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:gravity="center|end"
            android:hint="@string/group_psw_hint1"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingStart="5dp"
            android:maxLength="16"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        style="@style/divider_line"
        android:visibility="visible" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/confirm_psw"
            android:textColor="#2D2933"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/confirm_group_psw_et"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:gravity="center|end"
            android:hint="请确认群密码"
            android:inputType="textPassword"
            android:paddingEnd="20dp"
            android:paddingStart="5dp"
            android:maxLength="16"
            android:textSize="15sp" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:gravity="center|start"
            android:text="@string/group_psw_hint2"
            android:textColor="#2D2933"
            android:textSize="15sp" />

        <Switch
            android:id="@+id/open_group_psw_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:checked="false"
            android:gravity="center"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track" />

    </RelativeLayout>

    <View
        style="@style/divider_line"
        android:visibility="gone" />

    <TextView
        android:id="@+id/ok_btn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/default_btn_selector"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:visibility="visible" />

</LinearLayout>