<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/with_space_color"
    android:orientation="vertical"
    tools:context=".ui.mine.VipCenterActivity">

    <include layout="@layout/header_common" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/item_bg"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/expire_time"
                            android:textColor="#282A2D"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/expire_time_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:textColor="@color/tx99"
                        android:textSize="15sp"
                        tools:text="2018-12-12" />
                </RelativeLayout>

                <View style="@style/divider_line" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/item_bg"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/current_score"
                            android:textColor="#282A2D"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/current_score_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:textColor="@color/tx99"
                        android:textSize="15sp"
                        tools:text="328" />
                </RelativeLayout>

            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:text="@string/refill_vip"
                android:textColor="@color/tx99"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:text="@string/open_length"
                            android:textColor="#282A2D"
                            android:textSize="16sp" />

                    </RelativeLayout>

                    <com.liuniukeji.mixin.widget.AutoMeasureHeightGridView
                        android:id="@+id/vip_months_grv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="15dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_weight="3"
                        android:columnWidth="100dp"
                        android:gravity="center"
                        android:horizontalSpacing="5dp"
                        android:numColumns="4"
                        android:stretchMode="columnWidth"
                        android:verticalSpacing="10dp" />


                </LinearLayout>

                <View style="@style/divider_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20dp"
                        android:text="@string/price"
                        android:textColor="#282A2D"
                        android:textSize="16sp" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/gold_coin_price_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="5dp"
                            android:textColor="@color/colorPrimary"
                            android:textSize="18sp"
                            tools:text="120" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:text="@string/gold_coin"
                            android:textColor="#282A2D"
                            android:textSize="16sp" />
                    </LinearLayout>


                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/buy_vip_tv"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginBottom="50dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/default_btn_selector"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/open_now"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/vip_right_tip"
                    android:textColor="#282A2D"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/vip_right_tip1"
                    android:textColor="#282A2D"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/vip_right_tip2"
                    android:textColor="#282A2D"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/vip_right_tip3"
                    android:textColor="#282A2D"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/vip_right_tip4"
                    android:textColor="#282A2D"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>