<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/with_space_color"
    android:orientation="vertical"
    tools:context=".ui.mine.baseinfo.BirthdayActivity">

    <include layout="@layout/header_common" />

    <RelativeLayout
        android:id="@+id/choose_birthday_rl"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/item_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/my_birthday"
            android:textColor="#282A2D"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/choose_birthday_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:text="@string/choose_birthday"
            android:textColor="#98999D"
            android:textSize="16sp" />

    </RelativeLayout>

    <View style="@style/divider_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="@string/show_birthday"
            android:textColor="#282A2D"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/birthday_sw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:thumb="@drawable/thumb"
            android:track="@drawable/track"
            android:layout_marginEnd="20dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/birthday_save_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/default_btn_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="15sp" />


</LinearLayout>